# smartqq

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  api.cpp  api.h  api.hpp  build.sh  callback.h  callback.hpp  client.cpp  client.h  client.hpp  main.cpp  model.cpp  model.h  model.hpp  robot.cpp  robot.h  robot.hpp  smartqq.h  smartqq.hpp  utils.cpp  utils.h
botplugin/: dice.h  dice.hpp  turingbot.h  turingbot.hpp
include/: api.hpp  client.hpp  model.hpp
